Fixed some answers

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "The benefit of splitting a dataset into training and testing subsets is the ability to test if our model generalizes well enough. The important thing to keep in mind when developing a learning algorithm is that a model should be able to perform well on new, previously unobserved data. We reserve a subset of our data to test the model's performance and never use it on a training stage. The reasonable ratio of train and test size allows to avoid underfitting and overfitting: if a train set is not large enough it is harder to train a model to capture the dependencies, but if we use all of the data available there is a big chance that a model simply memorizes all the data points and won't be able to generalize well."
+    "The benefit of splitting a dataset into training and testing subsets is the ability to test if our model generalizes well enough. The important thing to keep in mind when developing a learning algorithm is that a model should be able to perform well on new, previously unobserved data. We hold out a subset of our data to test the model's performance and never use it on a training stage. The reasonable ratio of train and test size allows to avoid underfitting and overfitting: if a train set is not large enough, it is harder to train a model to capture the dependencies, but if we use all of the data available, there is a big chance that a model simply memorizes all the data points and won't be able to generalize well."
    ]
   },
   {
@@ -392,8 +392,8 @@
    "source": [
     "**Answer: **\n",
     "I pick a model with `max_depth = 6`\n",
-    "- When very few data point are available the training score is very close to 1 as the model is clearly overfitting. With the increase of the nubmer of training points the score of the training curve decreases slightly. At the same the score of the testing curve is increasing and it approaches a fairly high value, but the testing score is still quite lower than the training score, the curves do not converge to the same value. The model is overfitting given the available data.\n",
-    "- Having more training points would likely benefit the model, as the new training data could have new dependencies to learn. More training data will decrease the training score, but might increase the testing score. The drawback of adding new training data points is that the model can become computationally less efficient and convergence of the training and the testing curves is likely to be slow if actually happening."
+    "- When very few data points are available the training score is very close to 1 as the model is clearly overfitting. With the increase of the nubmer of training points the score of the training curve decreases slightly. At the same the score of the testing curve is increasing and it approaches a fairly high value, but the testing score is still quite lower than the training score, the curves do not converge to the same value. The model is overfitting given the available data.\n",
+    "- Having more training points would likely benefit the model, as the new training data could have new dependencies to learn. More training data probably will decrease the training score, but might increase the testing score. The drawback of adding new training data points is that the model can become computationally less efficient and convergence of the training and the testing curves is likely to be slow if actually happening."
    ]
   },
   {
@@ -491,8 +491,8 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "- Grid search is a technique of choosing a best performing set of hyperparameters values from all the possible combinations of input values. Grid search allows to choose optimal hyperparameters automatically instead of picking them manually\n",
-    "- Assume that one has chosen an algorithm to use, e.g. a decision tree. The problem that arises is how to choose optimal parameters of the model. One can consider varying values of maximum depth and minimum number of samples in leaf nodes. Then one defines the ranges of values of hyperparameters, e.g. maximum depth is from 1 to 10 and minimum number of samples in leaves are even numbers from 2 to 20. The training dataset is split into a training and a validation subsets. Then a model is fit for each combination of the parameters on the training subset. One can think of an N-dimension table (a grid) where N is a number of parameters and each of the N axes is marked with a value of a corresponding paramer within the given range. Each model is then validated on a validation subset using a desired metric and values of the metric are written to corresponding cells of the grid. Finally, a combination of parameters corresponding to the best value of the metric is chosen. This combination can be considered optimal hyperparameter values."
+    "- Grid search is a technique of choosing a best performing set of hyperparameter values from all the possible combinations of values provided to the algorithm. Grid search allows to choose optimal hyperparameters automatically instead of picking them manually.\n",
+    "- Assume that one has chosen an algorithm to use, e.g. a decision tree. The problem that arises is how to choose optimal parameters of the model. One can consider varying values of maximum depth and minimum number of samples in leaf nodes. Then one defines the ranges of values of hyperparameters, e.g. maximum depth is from 1 to 10 and minimum number of samples in leaves are even numbers from 2 to 20. The training dataset is split into a training and a validation subsets. Then a model is fit for each combination of the parameters on the training subset. One can think of an N-dimension table (a grid) where N is a number of parameters and each of the N axes is marked up with values of a corresponding paramer within the given range. Each model is then validated on a validation subset using a desired metric and values of the metric are written to the corresponding cells of the grid. Finally, a combination of parameters corresponding to the best value of the metric is chosen. This combination can be considered optimal hyperparameter values."
    ]
   },
   {
@@ -516,7 +516,7 @@
    "source": [
     "**Answer: **\n",
     "- k-fold cross-validation is a technique to validate a trained algorithm. Initial training set is split into k subsets and a model is trained k times. Each time k-1 subsets are used for training and remaining subset is used for validation.\n",
-    "- k-fold cross-validation can be used in combination with grid search. When running an ordinary grid search we usually have our entire dataset split into three subsets: training set, validation set and testing set. This way we have reduced the size of the dataset used for fitting the model and there is a chance to underfit or to depend on the random split of the training dataset. With k-fold cross-validation we actually can use the whole training set for fitting and validating the model and obtain more accurate validation scores as the model is fit and validated on different subsets each of the k times. This techniques makes validation less dependent on random splits of the training set."
+    "- k-fold cross-validation can be used in combination with grid search. When running an ordinary grid search we usually have our entire dataset split into three subsets: training set, validation set and testing set. This way we have reduced the size of the dataset used for fitting the model and there is a chance to underfit or to depend on the random split of the training dataset. With k-fold cross-validation we actually can use the whole training set for fitting and validating the model and obtain more accurate validation scores as the model is fit and validated on different subsets each of the k times. This technique makes validation less dependent on random splits of the training set."
    ]
   },
   {
@@ -1166,7 +1166,7 @@
     "    Predicted selling price for Client 2's home: \\$237,478.72;\n",
     "    Predicted selling price for Client 3's home: \\$931,636.36.\n",
     "\n",
-    "- Given the values for features the predicted prices seem reasonable. The predicted price of client 1's home is a bit lower, than mean and homes with prices close to that have similar feature values. Exploring homes that are similar to client 2's home one can notice high variance of prices, but the predicted price of client 2's home lies within the price range for homes with similar feature values. It makes sense to compare features of client 3's home to features of homes with prices greater than \\$900000. Turns out that these homes have similar feature values and that predicted price of client 3's home is very close. Besides it doesn't exceed the maximum price in the dataset."
+    "- Given the values for features the predicted prices seem reasonable. The predicted price of client 1's home is a bit lower than mean and homes with prices close to that have similar feature values. Exploring homes that are similar to client 2's home one can notice high range of prices, but the predicted price of client 2's home lies within that range. It makes sense to compare features of client 3's home to features of homes with prices greater than \\$900000. Turns out that these homes have similar feature values and that predicted price of client 3's home is very close. Besides it doesn't exceed the maximum price in the dataset."
    ]
   },
   {
@@ -1228,10 +1228,10 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "- House prices data from 40 years ago can easily be obsolete and become irrelevant. Inflation is important, but what really matters is that economic and social conditions in Boston could have changed significantly, resulting in a different picture of Boston housing.\n",
-    "- The features present in the data are insufficient to describe a home, because the factors contributing the price of a house include plot area, presence of pool, garage size, age, conditions, location, transportation available and many others.\n",
-    "- The model make pretty close predictions at first glance, but the range of prediction is about 15% which might seem quite large. Due to small size of the dataset model becomes sensitive to a shuffle of train-test split. Intuitively more data makes a model more robust as it is less likely to have a dataset with with very specific dependencies.\n",
-    "- Not only would data collected in Boston not be applicable in a rural city, but it is very likely that this data would be irrelevat to another urban city such as New York. Different cities can have differnt socio-economic conditions, different demographics and different homes themselves. It makes more sense to use data collected in particular city to predict prices in the same city.\n",
+    "- House prices data from 40 years ago can easily be obsolete and become irrelevant. Inflation is important, but what really matters is that economic and social conditions in Boston could have changed significantly, resulting in a different image of Boston housing.\n",
+    "- The features present in the data are insufficient to describe a home, because the factors contributing the price of a house include plot area, presence of pool, garage size, age, conditions, location, transportation availability and many others.\n",
+    "- The model make pretty close predictions at first glance, but the range of prediction is about 15% of the predicted price which seems to be quite large. Due to small size of the dataset model becomes sensitive to a shuffle of train-test split. Intuitively more data makes a model more robust as it is less likely to have a dataset with with very specific dependencies.\n",
+    "- Not only would data collected in Boston not be applicable in a rural city, but it is very likely that this data would be irrelevant in another urban city such as New York. Different cities can have differnt socio-economic conditions, different demographics and different homes themselves. It makes more sense to use data collected in particular city to predict prices in the same city.\n",
     "- I think it is not completely fair to judge he price of an individual home based on the entire neighborhood. Certainly, one can capture some general patterns in pricing within the neighborhood, but very different homes can be located next to each other in the same neighborhood, and naturally their prices would differ."
    ]
   },
